<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/full"
    android:layout_height="match_parent"
    tools:context=".DaftarActivity">

    <ImageView
        android:id="@+id/btn_back_daftar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/reg_nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nama"
            android:textColor="#000"
            android:textSize="15dp"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/corner4"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/reg_notelp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:hint="@string/no_telepon"
            android:textColor="#000"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner4"
            android:inputType="number"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/tv_regEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:background="@drawable/corner4"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/tv_regPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:textSize="15dp"
            android:background="@drawable/corner4"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"/>

        <Button
            android:shadowColor="#000"
            android:id="@+id/btn_signUp"
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner4"
            android:gravity="center"
            android:elevation="10dp"
            android:text="@string/btndaftar"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>